# shaforce

./: Cargo.toml
src/: main.rs  sha1.wgsl
