[package]
name = "shaforce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
itertools = "0.11.0"
rayon = "1.8.0"
tokio = { version = "1.33.0", features = ["full"] }
wgpu = "0.17.1"

[dev-dependencies]
proptest = "1.3.1"
sha1 = "0.10.6"
